render fix